refactor StreamApiExamples to use toList() for collecting stream results